syntax = "proto3";

option go_package = "proto";

service auth {
  rpc create_token(create_token_req) returns (create_token_res) {}
  rpc verify_token(verify_token_req) returns (verify_token_res) {}
}

enum token_type {
  ADMIN = 0;
  CLIENT = 1;
}

enum token_error{
  EXPIRED = 0;
  USER_MATCH = 1;
}

message create_token_req {
  int64 uid = 1;
  token_type token_type = 2;
}

message create_token_res {
  string token = 1;
}

message verify_token_req {
  int64 uid = 1;
  token_type token_type = 2;
  string token = 3;
}

message verify_token_res {
  token_error token_error = 1;
  int64 uid = 2;
}


//protoc -I . --go_out=plugins=grpc:. api/proto/proto.proto